--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -3,7 +3,15 @@
 @import "utils/mixins";
 @import "utils/fonts";
 
+@import "utils/modules/content";
+@import "utils/modules/preview";
+@import "utils/modules/saved-modules";
+@import "utils/modules/scroll";
+@import "utils/modules/text-field";
+@import "utils/modules/text-menu";
+
 html,
 body {
-  background-color: $smoke;
+  padding: 0;
+  margin: 0;
 }
